<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/Creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/line_item_creator"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/view_count"
        app:layout_constraintTop_toTopOf="@+id/date"
        tools:text="@string/line_item_creator" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/line_item_creator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@tools:sample/avatars[0]"
        tools:srcCompat="@tools:sample/avatars" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:clickable="false"
        android:contentDescription="@string/line_item_question_answered"
        app:layout_constraintEnd_toStartOf="@+id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line_item_view_count_content_description"
        android:text="@string/line_item_default_view_count"
        app:layout_constraintBottom_toBottomOf="@+id/Creator"
        app:layout_constraintEnd_toEndOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/score"
        tools:text="@string/line_item_default_view_count" />

    <TextView
        android:id="@+id/answer_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/line_item_answer_count_content_description"
        android:text="@string/line_item_default_answer_count"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="@+id/score"
        tools:text="@string/line_item_default_answer_count" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/line_item_score_content_description"
        android:text="@string/line_item_default_score"
        app:layout_constraintBottom_toTopOf="@+id/view_count"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:text="@string/line_item_default_score" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/line_item_date_content_description"
        android:text="@string/line_item_default_date"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:text="@string/line_item_default_date" />

    <TextView
        android:id="@+id/question"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/line_item_question_content_description"
        android:text="@string/line_item_default_question"
        app:layout_constraintEnd_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/line_item_default_question" />
</android.support.constraint.ConstraintLayout>
